# zksync-os-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  Dockerfile  README.md  audit.toml  deny.toml  run_6565.sh  run_6566.sh  run_en.sh  run_local.sh  versions.json
.config/: nextest.toml
.github/actions/runner-setup/: action.yaml
.github/scripts/: loadtest-compare-baseline.sh  test-configs.sh
.github/workflows/: ai-update-pr.yaml  cargo-audit.yml  ci.yml  deploy-docs.yml  loadtest.yml  release-bins.yml  spec-tests.yaml
docs/: book.toml
docs/plans/: 2026-03-05-loadbase-ci-benchmarking.md  2026-03-09-bencher-continuous-benchmarking.md
docs/src/: README.md  SUMMARY.md
docs/src/design/: components.md  db.md  genesis.md  glossary.md  index.md  prover_api.md  rpc.md  state.md  subsystems.md  tree.md
docs/src/guides/: generate_l1_state.md  index.md  loadtest_regression_monitoring.md  running_with_l1.md  starting_many_chains.md  updating.md
docs/src/setup/: batch_verification.md  docker.md  exposed_ports.md  external_node.md  faq.md  index.md  local_explorer.md  local_run.md  multi_node_consensus.md  prerequisites.md
genesis/: genesis.json
integration-tests/: Cargo.toml
integration-tests-macros/: Cargo.toml
integration-tests-macros/src/: lib.rs
integration-tests/src/: assert_traits.rs  config.rs  contracts.rs  dyn_wallet_provider.rs  lib.rs  multi_node.rs  network.rs  provider.rs  rpc_recorder.rs  test_config.rs  utils.rs
integration-tests/src/upgrade/: interfaces.rs  tester.rs
integration-tests/tests/: api.rs  call.rs  consensus_node.rs  erc20.rs  external_node.rs  filter.rs  interop.rs  l1.rs  mempool.rs  mod.rs  prover.rs  pubsub.rs  tracing.rs  upgrade.rs
integration-tests/tests/consensus_node/: restarted_node_catchup.rs
integration-tests/tests/node/: batcher.rs  mod.rs  rebuild.rs  restart.rs
integration-tests/tests/upgrade/: mod.rs
latest/: print.html  searchindex.js  searchindex.json  toc.html  toc.js
latest/design/: zks_getProof.html
latest/guides/: index.html
latest/setup/: batch_verification.html  external_node.html  local_run.html
lib/base_token_adjuster/: Cargo.toml
lib/batch_types/: Cargo.toml
lib/batch_types/src/: batch_info.rs  batch_signature.rs  block_merkle_tree_data.rs  lib.rs
lib/batch_verification/: Cargo.toml
lib/batch_verification/src/: config.rs  lib.rs  request.rs  response.rs  verify_batch_wire.rs
lib/batch_verification/src/client/: block_cache.rs  metrics.rs  mod.rs
lib/batch_verification/src/sequencer/: component.rs  mod.rs  server.rs
lib/batch_verification/src/tests/: mod.rs
lib/batch_verification/src/verifier/: mod.rs
lib/batch_verification/src/wire_format/: conversion.rs  mod.rs  payload.rs  v1.rs  v2.rs
lib/batch_verification/src/wire_format/tests/: mod.rs
lib/config_db/: Cargo.toml
lib/config_db/src/: lib.rs
lib/contract_interface/: Cargo.toml
lib/contract_interface/src/: calldata.rs  l1_discovery.rs  lib.rs  models.rs
lib/external_price_api/: Cargo.toml
lib/gas_adjuster/: Cargo.toml
lib/gas_adjuster/src/: lib.rs  statistics.rs
lib/genesis/src/: lib.rs
lib/interop_watcher/src/: lib.rs
lib/l1_sender/: Cargo.toml
lib/l1_sender/src/: batcher_metrics.rs  batcher_model.rs  commitment.rs  config.rs  lib.rs  metrics.rs  pipeline_component.rs  upgrade_gatekeeper.rs
lib/l1_watcher/: Cargo.toml
lib/l1_watcher/src/: batch_range_watcher.rs  commit_watcher.rs  committed_batch_provider.rs  config.rs  execute_watcher.rs  gateway_migration_watcher.rs  interop_watcher.rs  lib.rs  persist_batch_watcher.rs  sl_aware_watcher.rs  traits.rs  tx_watcher.rs  upgrade_tx_watcher.rs  util.rs  watcher.rs
lib/mempool/: Cargo.toml
lib/mempool/src/: interop_tx_stream.rs  lib.rs  pool.rs  stream.rs
lib/merkle_tree/: Cargo.toml
lib/merkle_tree/src/: with_version.rs
lib/metadata/: Cargo.toml
lib/metadata/src/: lib.rs
lib/multivm/: Cargo.toml  build.rs
lib/multivm/src/: adapter.rs  lib.rs
lib/multivm/src/apps/: mod.rs
lib/network/: Cargo.toml
lib/network/src/: lib.rs  protocol.rs  service.rs  tx_forward.rs  version.rs
lib/network/tests/: e2e.rs
lib/observability/: Cargo.toml  README.md
lib/observability/src/: lib.rs  logs.rs  opentelemetry.rs  sentry.rs
lib/pipeline/src/: builder.rs
lib/priority_tree/: Cargo.toml
lib/priority_tree/src/: lib.rs
lib/raft/: Cargo.toml
lib/raft/src/: bootstrap.rs  config.rs  engine.rs  init.rs  leadership_monitor.rs  lib.rs  model.rs  network.rs  state_machine.rs  storage.rs
lib/reth_compat/: Cargo.toml
lib/reth_compat/src/: provider.rs
lib/revm_consistency_checker/: Cargo.toml  README.md
lib/rocksdb/src/: db.rs
lib/rpc/: Cargo.toml
lib/sequencer/: Cargo.toml
lib/socket/: Cargo.toml
lib/socket/src/: lib.rs
lib/storage/: Cargo.toml
lib/storage/src/: lib.rs
lib/storage/src/db/: replay.rs  repository.rs
lib/storage/src/in_memory/: repository.rs
lib/storage/src/lazy/: repository.rs
lib/storage_api/: Cargo.toml
lib/types/: Cargo.toml
loadbase/: README.md
loadbase/src/: erc20.rs  erc20_worker.rs  gas.rs  main.rs  metrics.rs  output.rs  wallets.rs
local-chains/: README.md  local_dev.yaml
local-chains/v30/: config.json
local-chains/v30.2/: genesis.json  l1-state.json.sha256  versions.yaml
local-chains/v31/: config.json  genesis.json
local-chains/v31.0/: genesis.json  l1-state.json.sha256  versions.yaml
tools/generate-deposit/: Cargo.toml
(+136 files in other folders)
