[package]
name = "zksync_os_config_db"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
zksync_os_rocksdb.workspace = true
smart-config.workspace = true
serde_yaml.workspace = true
