[package]
name = "zksync_os_metadata"
description = "ZKsync OS node metadata"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
semver.workspace = true
