[package]
name = "zksync_os_socket"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
backon.workspace = true
tokio = { workspace = true, features = ["io-util", "net"] }
tracing.workspace = true
