[package]
name = "zksync_os_storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_rocksdb.workspace = true
zksync_os_storage_api.workspace = true
zksync_os_types.workspace = true
zksync_os_genesis.workspace = true
zksync_os_metadata.workspace = true

zksync_os_interface.workspace = true
zk_os_forward_system.workspace = true

alloy = { workspace = true, default-features = false, features = ["eips", "rlp"] }
dashmap.workspace = true
tokio.workspace = true
tracing.workspace = true
vise.workspace = true
futures.workspace = true
bincode.workspace = true
semver.workspace = true
